--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta
-      name="description"
-      content="Soleva builds modern websites, mobile apps, and SaaS platforms tailored to your business. Contact us to turn your ideas into digital solutions."
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Soleva builds modern websites, mobile apps, and SaaS platforms tailored to your business. Contact us to turn your ideas into digital solutions." />
+  <title>Soleva | Web & App Development Studio</title>
 
-    <title>Soleva | Web & App Development Studio</title>
   </head>
   <body>
     <div id="root"></div>
