--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+
     <meta name="description" content="Soleva builds modern websites, mobile apps, and SaaS platforms tailored to your business. Contact us to turn your ideas into digital solutions." />
   <title>Soleva | Web & App Development Studio</title>
 
